using System.Collections;
using System.Collections.Generic;
using UnityEngine;

namespace Game.Project
{
    public class Constants
    {
        public const string MAIN_MENU_SCENE_NAME = "MainMenuScene";
        public const string LEVEL_SCENE_NAME = "LevelScene";
        public const string MUSIC_VOLUME = "musicVol";
        public const string SFX_VOLUME = "sfxVol";

        public const string IS_IDLE_ANIM_PARAM = "is_idle";

        public const string IDLE_X_ANIM_PARAM = "idle_x";
        public const string IDLE_Y_ANIM_PARAM = "idle_y";
        
        public const string MOVE_X_ANIM_PARAM = "move_x";
        public const string MOVE_Y_ANIM_PARAM = "move_y";


        
        public const float MOVEMENT_DRAG = 5.0f;
        public const float MOVEMENT_ANGULAR_DRAG = 10.0f;
    }
}
